--- a/build.gradle
+++ b/build.gradle
@@ -29,10 +29,13 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-aop')
 	compile('org.springframework.boot:spring-boot-starter-jdbc')
+	compile("commons-dbcp:commons-dbcp:1.4")
+	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.1.1')
 	compile ('org.springframework.boot:spring-boot-configuration-processor')
 	runtime('com.h2database:h2')
 	runtime('mysql:mysql-connector-java')
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile group: 'org.lazyluke', name: 'log4jdbc-remix', version: '0.2.7'
 }
