--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,12 @@
 
-dataSource:
-  {  'driverClassName' : 'net.sf.log4jdbc.DriverSpy'
-   , 'url' : 'neutti.c2k16nlwk2pw.ap-northeast-2.rds.amazonaws.com'
-   , 'userName' : 'neutti'
-   , 'password' : 'qwerasdf'
-  }
+DataSource:
+  driverClassName: net.sf.log4jdbc.DriverSpy
+  url: jdbc:log4jdbc:mysql://neutti.c2k16nlwk2pw.ap-northeast-2.rds.amazonaws.com
+  userName: neutti
+  password: qwerasdf
+
+Mybatis:
+  configPath: META-INF/mybatis/mybatis.xml
+
+
+
