--- a/build.gradle
+++ b/build.gradle
@@ -38,4 +38,6 @@ dependencies {
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	compile group: 'org.lazyluke', name: 'log4jdbc-remix', version: '0.2.7'
+	compile 'io.springfox:springfox-swagger2:2.4.0'
+	compile 'io.springfox:springfox-swagger-ui:2.4.0'
 }
