--- a/build.gradle
+++ b/build.gradle
@@ -40,4 +40,6 @@ dependencies {
 	compile group: 'org.lazyluke', name: 'log4jdbc-remix', version: '0.2.7'
 	compile 'io.springfox:springfox-swagger2:2.4.0'
 	compile 'io.springfox:springfox-swagger-ui:2.4.0'
+	compile 'com.squareup.retrofit2:retrofit:2.1.0'
+	compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 }
