--- a/build.gradle
+++ b/build.gradle
@@ -41,5 +41,5 @@ dependencies {
 	compile 'io.springfox:springfox-swagger2:2.4.0'
 	compile 'io.springfox:springfox-swagger-ui:2.4.0'
 	compile 'com.squareup.retrofit2:retrofit:2.1.0'
-	compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+	compile 'com.squareup.retrofit2:converter-jackson:2.1.0'
 }
