--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-aop')
 	compile('org.springframework.boot:spring-boot-starter-jdbc')
+	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
 	compile("commons-dbcp:commons-dbcp:1.4")
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.1.1')
