--- a/build.gradle
+++ b/build.gradle
@@ -60,4 +60,7 @@ dependencies {
 	compile group: 'com.itextpdf', name: 'itext-asian', version: '5.2.0'
 	compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.8'
 	compile 'net.sf.jasperreports:jasperreports:5.6.1'
+
+	compile 'org.webjars:jquery:3.1.1'
+	compile 'org.webjars.npm:bootstrap:3.3.7'
 }
