--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,14 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 
-jar {
+jar.doFirst {
+	manifest {
+		attributes('Main-Class': 'com.web.sangsang.SangsangWebApplication',
+				'Class-Path':configurations.compile.collect { it.getAbsolutePath() }.join(' '))
+	}
 	baseName = 'demo'
 	version = '0.0.1-SNAPSHOT'
+	archiveName = "sangsang.jar"
 }
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
