--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,10 @@ apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 
 jar.doFirst {
+	/* from configurations.compile.collect { it } */ //with jar
 	manifest {
-		attributes('Main-Class': 'com.web.sangsang.SangsangWebApplication',
-				'Class-Path':configurations.compile.collect { it.getAbsolutePath() }.join(' '))
+		attributes 'Main-Class': 'com.web.sangsang.SangsangWebApplication',
+				'Class-Path': configurations.compile.collect { ("file:///" + it.absolutePath + "") }.join(' ')
 	}
 	baseName = 'demo'
 	version = '0.0.1-SNAPSHOT'
