--- a/src/main/resources/application-datasource.yml
+++ b/src/main/resources/application-datasource.yml
@@ -1,7 +1,7 @@
 ---
 DataSource:
   driverClassName: net.sf.log4jdbc.DriverSpy
-  url: jdbc:log4jdbc:mysql://neutti.c2k16nlwk2pw.ap-northeast-2.rds.amazonaws.com/neutti?autoReconnection=true
+  url: jdbc:log4jdbc:mysql://neutti.c2k16nlwk2pw.ap-northeast-2.rds.amazonaws.com?autoReconnection=true
   userName: neutti
   password: qwerasdf
 
