--- a/build.gradle
+++ b/build.gradle
@@ -69,4 +69,5 @@ dependencies {
 
 	compile 'org.webjars:jquery:3.1.1'
 	compile 'org.webjars.npm:bootstrap:3.3.7'
+	compile group: 'org.webjars', name: 'datatables', version: '1.10.12'
 }
