--- a/src/main/resources/application-datasource.yml
+++ b/src/main/resources/application-datasource.yml
@@ -1,9 +1,11 @@
 ---
 DataSource:
   driverClassName: net.sf.log4jdbc.DriverSpy
-  url: jdbc:log4jdbc:mysql://neutti.c2k16nlwk2pw.ap-northeast-2.rds.amazonaws.com?autoReconnection=true
+  url: jdbc:log4jdbc:mysql://neutti.c2k16nlwk2pw.ap-northeast-2.rds.amazonaws.com
   userName: neutti
   password: qwerasdf
+  testOnBorrow: true
+  validationQuery: SELECT 1
 
 Mybatis:
   configPath: META-INF/mybatis/mybatis.xml
