--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
   http:
     encoding:
       charset: UTF-8
+  thymeleaf:
+    cache: false
 
 ### tomcat 서버 포트 & error 화면 안보이게 설정
 server:
@@ -16,5 +18,6 @@ server:
 security:
   basic:
     enabled: false
+
 
 
